tests/machine/x/c/python_auto.c
#include <stdio.h>
#include <stdlib.h>

int main() {
  printf("%d\n", math.sqrt(16.0));
  printf("%d\n", math.pi);
  return 0;
}
